--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Batman </title>
 </head>
 <body>
-    
+    <h1> exemple de titre </h1>
+    <p> ceci est un paragraphe </p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, 
+        mollitia iure delectus in beatae ab quibusdam 
+        quae laborum eos eum ad itaque est eveniet cupiditate at distinctio, 
+        cumque dolorum enim!
+
+    </p>
 </body>
 </html>
