initialise le projet batman tout en ajoutant le fichier index et readme

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman </title>
 </head>
 <body>
-    <h1> exemple de titre </h1>
-    <p> ceci est un paragraphe </p>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, 
-        mollitia iure delectus in beatae ab quibusdam 
-        quae laborum eos eum ad itaque est eveniet cupiditate at distinctio, 
-        cumque dolorum enim!
+   <header>
+    
+   </header>
+   <main>
 
-    </p>
+   </main>
+   <footer>
+
+   </footer>
 </body>
 </html>
