ajout de modification dans hml body background color et color text white

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Batman </title>
+    <title> Batman </title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+    <H1> gamer </H1>
    <header>
-    
+     <nav> 
+        <a href="index.html"><img src="Assets/Logos/logohome.png" alt=""></a>
+        <a href="index.html">HOME</a>
+     </nav>
    </header>
    <main>
 
