ajout des modifications dans html et css

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <style>
         body {
             background-color: black;
-            color: white;
+            color: silver;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
      <nav> 
-        <a href="index.html"><img src="Assets/Logos/logohome.png" alt=""></a>
-        <a href="index.html" target="_blank ">HOME</a>
+       <div id="entête1"> 
+        <a href="index.html"><img src="Assets/Logos/logohome.png" alt=""></a></div>
+      <div class="entête2"> <a href="index.html" target="_blank ">HOME</a></div>
+       
      </nav>
    </header>
    <main>
