ajout des modifications sur html et css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    </header>
    <main>
     <!--La première section de la partie heros-->
-    <section> 
+   <div class="section1">
         <div> <p> Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les 
             criminels de Gotham City. Il est vengeur. Il est la nuit </p>
             <h2> Il est Batman. </h2>
@@ -33,7 +33,8 @@
         </div>
         </div>
         <img src="Assets/Logos/flèche_down_header.png" alt="">
-    </section>
+    </div>
+    
     <!--La deuxième section-->
     <section>
         <div>  
