ajout des modifications sur html et css

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
    <main>
     <!--La première section de la partie heros-->
    <div class="section1">
-        <div> <p> Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les 
+        <div class="paraphe">
+             <p> Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les 
             criminels de Gotham City. Il est vengeur. Il est la nuit </p>
+        </div>
             <h2> Il est Batman. </h2>
         <div> 
             <a href="#">VOIR LE HEROS</a>
